--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.412.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
